--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   get: ^4.6.5
+  liquid_swipe: ^3.1.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -22,4 +24,5 @@ flutter:
   uses-material-design: true
 
   assets:
-     - assets/images/
+    - assets/images/
+    - assets/images/splash_screen_images/
